plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace = "xyz.tbvns.ao3m"
    compileSdk = 35

    defaultConfig {
        applicationId = "xyz.tbvns.ao3m"
        minSdk = 33
        targetSdk = 34
        versionCode = 1
        versionName = "1.0"
        archivesBaseName = "CO3"

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }

    signingConfigs {
        release {
            if (project.hasProperty("RELEASE_STORE_FILE")) {
                storeFile = file(RELEASE_STORE_FILE)
                storePassword = RELEASE_STORE_PASSWORD
                keyAlias = RELEASE_KEY_ALIAS
                keyPassword = RELEASE_KEY_PASSWORD
            }
        }
    }

    buildTypes {
        getByName("release") {
            minifyEnabled = false
            proguardFiles(
                    getDefaultProguardFile("proguard-android-optimize.txt"),
                    "proguard-rules.pro"
            )
            signingConfig = signingConfigs.getByName("release")
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    buildFeatures {
        viewBinding = true
        compose = true
    }

    packagingOptions {
        resources.excludes.add("META-INF/DEPENDENCIES")
    }
}

dependencies {
    implementation(libs.appcompat)
    implementation(libs.material)
    implementation(libs.constraintlayout)
    implementation(libs.navigation.fragment)
    implementation(libs.navigation.ui)
    implementation(libs.legacy.support.v4)
    implementation(platform(libs.compose.bom))
    implementation(libs.material3)
    implementation libs.activity
    testImplementation(libs.junit)
    androidTestImplementation(libs.ext.junit)
    androidTestImplementation(libs.espresso.core)
    androidTestImplementation(platform(libs.compose.bom))
    androidTestImplementation(libs.ui.test.junit4)
    implementation("androidx.work:work-runtime-ktx:2.10.0")
    runtimeOnly("androidx.work:work-runtime-ktx:2.10.0")

    annotationProcessor("org.projectlombok:lombok:1.18.36")
    implementation("org.projectlombok:lombok:1.18.36")
    implementation("org.jsoup:jsoup:1.18.3")
    implementation("org.htmlunit:htmlunit3-android:4.3.0")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.18.3")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.3")
    implementation("org.xerial:sqlite-jdbc:3.49.1.0")
    implementation 'com.github.skydoves:colorpickerview:2.3.0'
    implementation 'com.github.tbvns:EZConf4j:-SNAPSHOT'

    debugImplementation(libs.ui.test.manifest)
}
